0.5/_sources/reference/kconfig/CONFIG_SERIAL_PCI_BDF.rst.txt
:orphan:

.. title:: SERIAL_PCI_BDF

.. option:: CONFIG_SERIAL_PCI_BDF

*BDF of serial PCI device*

Type: ``string``

Help
====

BDF: bus, device and function of the serial PCI device; for an example,
PCI device ttyS2: 0:18.2.


Direct dependencies
===================

\ :option:`SERIAL_PCI <CONFIG_SERIAL_PCI>`

*(Includes any dependencies from if's and menus.)*

Defaults
========

- "0:18.2" if \ :option:`SERIAL_PCI <CONFIG_SERIAL_PCI>`

Kconfig definition
==================

.. highlight:: kconfig

At ``arch/x86/Kconfig:176``

Included via ``Kconfig:3``

Menu path: (top menu)

.. parsed-literal::

    config SERIAL_PCI_BDF
    	string
    	prompt "BDF of serial PCI device" if \ :option:`SERIAL_PCI <CONFIG_SERIAL_PCI>`
    	default "0:18.2" if \ :option:`SERIAL_PCI <CONFIG_SERIAL_PCI>`
    	depends on \ :option:`SERIAL_PCI <CONFIG_SERIAL_PCI>`
    	help
    	  BDF: bus, device and function of the serial PCI device; for an example,
    	  PCI device ttyS2: 0:18.2.


*(Definitions include propagated dependencies, including from if's and menus.)*