2.3/_sources/reference/kconfig/CONFIG_SERIAL_PCI_BDF.rst.txt
:orphan:

.. title:: SERIAL_PCI_BDF

.. option:: CONFIG_SERIAL_PCI_BDF

*BDF of serial PCI device*

Type: ``hex``

Help
====

BDF: bus, device and function of the serial PCI device. The BDF is packed
into a 16bit WORD with format (B:8, D:5, F:3). For an example,
PCI device ttyS2: 0:18.2.


Direct dependencies
===================

\ :option:`SERIAL_PCI <CONFIG_SERIAL_PCI>`

*(Includes any dependencies from if's and menus.)*

Defaults
========

- 0x00c2 if \ :option:`SERIAL_PCI <CONFIG_SERIAL_PCI>`

Kconfig definition
==================

.. highlight:: kconfig

At ``arch/x86/Kconfig:136``

Included via ``Kconfig:3``

Menu path: (top menu)

.. parsed-literal::

    config SERIAL_PCI_BDF
    	hex
    	prompt "BDF of serial PCI device" if \ :option:`SERIAL_PCI <CONFIG_SERIAL_PCI>`
    	default 0x00c2 if \ :option:`SERIAL_PCI <CONFIG_SERIAL_PCI>`
    	depends on \ :option:`SERIAL_PCI <CONFIG_SERIAL_PCI>`
    	help
    	  BDF: bus, device and function of the serial PCI device. The BDF is packed
    	  into a 16bit WORD with format (B:8, D:5, F:3). For an example,
    	  PCI device ttyS2: 0:18.2.


*(Definitions include propagated dependencies, including from if's and menus.)*